kubernetes/apps/databases/sql/pg/pgadmin/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: pgadmin
spec:
  description: "Network policy for pgAdmin"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
  ingress:
    # Allow same namespace traffic
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
    # Allow ingress from envoy-gateway
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
  egress:
    # Allow access to Vault
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # Allow same namespace traffic (postgres)
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: db
    # Allow kube-apiserver access
    - toEntities:
        - kube-apiserver
    # Allow external API calls (e.g. for avatars, updates)
    - toEntities:
        - world
      toPorts:
        - ports:
          - port: "443"
            protocol: TCP
          - port: "80"
            protocol: TCP
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
